# waitup

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .lefthook.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  LICENSE  LINTING.md  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  deny.toml.old  docker-compose.yml  lefthook.yml  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  markdown-link-check.json  release-drafter.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml  question.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  lint.yml  release-drafter.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INTEGRATION_PATTERNS.md  PERFORMANCE.md  TROUBLESHOOTING.md  TUTORIALS.md
examples/: basic_tcp.rs  docker_compose.rs  http_health.rs  kubernetes_init.rs  library_usage.rs  multiple_services.rs
scripts/: generate-completions.sh  setup-hooks.sh
src/: async_traits.rs  cli.rs  config.rs  connection.rs  error.rs  iterators.rs  lib.rs  macros.rs  main.rs  presets.rs  security.rs  target.rs  types.rs  utils.rs  zero_cost.rs
tests/: integration_tests.rs
