[package]
name = "waitup"
version = "1.1.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Serhii Kaliuzhnyi <kalyuzhni.sergei@gmail.com>"]
description = "Wait for TCP ports and HTTP endpoints to be available. Essential for Docker, K8s, and CI/CD pipelines to ensure services are ready before proceeding."
license = "MIT"
repository = "https://github.com/grok-rs/waitup"
homepage = "https://github.com/grok-rs/waitup"
documentation = "https://docs.rs/waitup"
readme = "README.md"
keywords = ["cli", "health-check", "docker", "tcp", "http"]
categories = ["command-line-utilities", "network-programming", "development-tools", "web-programming"]
exclude = [
    "target/*",
    ".github/*",
    "*.log"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "time", "macros", "sync"] }
tokio-util = "0.7"
thiserror = "2.0.17"
humantime = "2.3"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
url = "2.5"
futures = "0.3"
async-trait = "0.1"
smallvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.9"
test-case = "3.3"

[[bin]]
name = "waitup"
path = "src/main.rs"
