[package]
name = "waitup"
version = "1.1.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Serhii Kaliuzhnyi <kalyuzhni.sergei@gmail.com>"]

description = "Wait for TCP ports and HTTP endpoints to be available. Essential for Docker, K8s, and CI/CD pipelines to ensure services are ready before proceeding."
license = "MIT"
repository = "https://github.com/grok-rs/waitup"
homepage = "https://github.com/grok-rs/waitup"
readme = "README.md"
keywords = ["cli", "health-check", "docker", "tcp", "http"]
categories = ["command-line-utilities", "network-programming", "development-tools", "web-programming"]
exclude = [
    "target/*",
    ".github/*",
    "*.log"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.56", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["net", "rt", "time", "macros"] }
thiserror = "2.0.18"
humantime = "2.3"
reqwest = { version = "0.13.1", features = ["rustls"], default-features = false }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[[bin]]
name = "waitup"
path = "src/main.rs"
